--- a/Reserva_Vehiculos/Views/Peticion/Peticion.cshtml
+++ b/Reserva_Vehiculos/Views/Peticion/Peticion.cshtml
@@ -2,68 +2,183 @@
 @{
     ViewData["Title"] = "peticion";
 }
-<div style="text-align: left;"> <!-- Contenedor para alinear a la derecha -->
-    <a class="btn btn-primary" asp-action="Login" asp-controller="User">
-        Login
-    </a>
-</div>
+
 <form asp-action="peticion" asp-controller="Peticion" method="post">
-    <fieldset>
-        <legend>Información Inicial</legend>
+    <nav id="mi-navbar" class="navbar navbar-expand-lg navbar-light bg-ligh">
+        <fieldset>
+            <legend>
+                Nueva Reserva
+            </legend>
 
-        <label for="fecha">Fecha:</label>
-        <input name="fechaini" type="date" id="fechaini">
+            <div class="container-fluid">
+                <div class="row w-100">
+                    <div class="col-md-4">
+                        <div class="navbar-brand">
+                            <img src="~/images/login.png" alt="Login" width="20" height="20" />
+                            <a class="navbar-brand" asp-action="Login" asp-controller="User">Login</a>
+                        </div>
+                        <div class="navbar-brand">
+                            <img src="~/images/icono-proveedor.png" alt="icono-proveedor" width="20" height="20" />
+                            <a class="navbar-brand" href="#">Quiero ser proveedor</a>
+                        </div>
+                        <div class="navbar-brand">
+                            <img src="~/images/icono-carro.png" alt="icono-carro" width="20" height="20" />
+                            <a class="navbar-brand" href="#">Mis reservas</a>
+                        </div>
+                    </div>
 
-        <label for="hora">Hora:</label>
-        <input name="hora_ini" id="hora_ini" type="time">
-    </fieldset>
 
-    <div style="text-align: right;"> <!-- Contenedor para alinear a la derecha -->
-        <input name="id_user" id="id_user" type="hidden" value="@Model.id_user">
-            <button type="submit" class="btn btn-primary">
-                Continuar
-            </button>
-    </div>
+                    <div class="col-md-6 d-flex align-items-center justify-content-end">
+                        <div class="row">
+                            <div class="col-md-10 mb-2">
+                                <div class="form-floating">
+                                    <select class="form-select" id="ubicacionDropdown" aria-label="Ubicación">
+                                        <option value="La Libertad">La Libertad</option>
+                                        <option value="El Mirador">El Mirador</option>
+                                        <option value="Brisas Altas">Brisas Altas</option>
+                                    </select>
+                                    <label for="ubicacionDropdown">Lugar de Retirada</label>
+                                </div>
+                            </div>
 
+                            <div class="mb-2">
+                                <input type="date" name="fechaini" id="fechaini" class="form-control"
+                                    style="width: 80%;" required>
+                            </div>
+                            <div class="mb-2">
+                                <input type="time" name="hora_ini" id="hora_ini" class="form-control"
+                                    style="width: 80%;" required>
+                            </div>
+                        </div>
 
-    <fieldset>
-        <legend>Información Final</legend>
+                        <!-- Segundo bloque -->
+                        <div class="row">
+                            <div class="col-md-10 mb-2">
+                                <div class="form-floating">
+                                    <select class="form-select" id="ubicacionDropdown2" aria-label="Ubicación">
+                                        <option value="La Libertad">La Libertad</option>
+                                        <option value="El Mirador">El Mirador</option>
+                                        <option value="Brisas Altas">Brisas Altas</option>
+                                    </select>
+                                    <label for="ubicacionDropdown2">Lugar de Devolucion</label>
+                                </div>
+                            </div>
 
-        <label for="fecha">Fecha:</label>
-        <input type="date" name="fechafin" id="fechafin">
+                            <br>
+                            <div class="mb-2">
+                                <input type="date" name="fechafin" id="fechafin" class="form-control"
+                                    style=" width: 80%;" required>
+                            </div>
+                            <div class="mb-2">
+                                <input type="time" name="hora_fin" id="hora_fin" class="form-control"
+                                    style="width: 80%;" required>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-2 d-flex align-items-center justify-content-end">
 
-        <label for="hora">Hora:</label>
-        <input name="hora_fin" id="hora_fin" type="time">
-    </fieldset>
+                        <input name="id_user" id="id_user" type="hidden" value="@Model.id_user">
+                        <button type="submit" class="btn btn-primary">Seguir</button>
+
+                    </div>
+
+                </div>
+            </div>
+        </fieldset>
+    </nav>
 </form>
+<div class="container-fluid mt-4">
+    <h3>Categoría de vehículos</h3>
+    <div class="row">
+        <div class="col-lg-10 mx-auto">
+            <!-- Cambia el tamaño del contenedor del carrusel -->
+            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner bg-secondary">
+                    @for (int i = 0; i < 5; i++)
+                    {
+                        if (i == 0)
+                        {
+                            <div class="carousel-item active">
+                                <img src="~/images/vehiculo1.png" alt="Vehiculo" class="d-block mx-auto" width="700"
+                                    height="400" /> <!-- Ajusta el tamaño de la imagen -->
+                                <div class="carousel-caption d-none d-md-block text-center mt-3">
+                                    <h5>Grupo A - Económico</h5>
+                                    <p>Kía Picanto 2024</p>
+                                </div>
+                            </div>
+                        }
+                        else
+                        {
+                            <div class="carousel-item">
+                                <img src="~/images/vehiculo@(i + 1).png" alt="Vehiculo" class="d-block mx-auto" width="700"
+                                    height="400" /> <!-- Ajusta el tamaño de la imagen -->
+                                <div class="carousel-caption d-none d-md-block text-center mt-3">
+                                    <h5>Grupo A - Económico</h5>
+                                    <p>Kía Picanto 2024</p>
+                                </div>
+                            </div>
+                        }
+                    }
 
-<br>
+                    <ol class="carousel-indicators">
+                        @for (int i = 0; i < 5; i++)
+                        {
+                            <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="@i"
+                                class="@((i == 0) ? "active" : "")"></li>
+                        }
+                    </ol>
+                </div>
 
-<div style="text-align: center;">
-    <h1>
-        Conoce nuestra flota
-    </h1>
-    <h3>Las mejores opciones para que reserves y aproveches</h3>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </div>
+    </div>
 </div>
 
-<div id="carouselExample" class="carousel slide">
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img src="..." class="d-block w-100" alt="...">
+
+<div id="mi-footer" class="container-fluid mt-5">
+    <footer class="custom-footer py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <h3>Contacto</h3>
+                    <p>Para cualquier pregunta, no dudes en contactarnos:</p>
+                    <ul class="list-unstyled">
+                        <li><strong>Correo:</strong> ejemplo@correo.com</li>
+                        <li><strong>Teléfono:</strong> 3133945794</li>
+                        <li><strong>WhatsApp:</strong> <a href="https://wa.me/3133945794">Enviar mensaje</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-6">
+                    <h3>Redes Sociales</h3>
+                    <ul class="list-unstyled d-flex align-items-center">
+                        <li class="me-3">
+                            <a href="https://www.facebook.com/" target="_blank">
+                                <img src="~/images/icono-facebook.png" alt="Facebook" width="30" height="30">
+                            </a>
+                        </li>
+                        <li class="me-3">
+                            <a href="https://www.youtube.com/" target="_blank">
+                                <img src="~/images/icono-youtube.png" alt="YouTube" width="30" height="30">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.instagram.com/" target="_blank">
+                                <img src="~/images/icono-instagram.png" alt="Instagram" width="30" height="30">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
-        <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="...">
-        </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-    </button>
+    </footer>
 </div>
