--- a/Reserva_Vehiculos/Views/Shared/_Layout.cshtml
+++ b/Reserva_Vehiculos/Views/Shared/_Layout.cshtml
@@ -33,6 +33,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="RegistroVehiculo"
                                 asp-action="RegistroVehiculo">Registrar Vehiculos</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ListadoReserva"
+                                asp-action="ListadoReserva">Listado Resevas</a>
+                        </li>
                     </ul>
                     <ul class="navbar-nav">
                         <li class="nav-item dropdown">
